--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,24 @@
 /* write your override styles here */
+/* write your override styles here */
+#wall .tag-1 {
+    display: none;
+}
+
+body div#wall div.parent div:last-child div#tag-6 {
+  background: url(../images/tag-6.png) no-repeat;
+  z-index: 16;
+  display: block;
+
+}
+
+div#wall div.parent #tag-5.slick {
+  background: url(../images/tag-5.png) no-repeat;
+  z-index: 10;
+  display: block;
+}
+
+body div#wall #tag-3.slick {
+  background: url(../images/tag-3.png) no-repeat;
+  z-index: 15;
+  display: block;
+}
